Harden Android WebView navigation downloads and lifecycle